perf: avoid the layout shift for post datetime

--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -178,6 +178,8 @@ nav[data-toggle=toc] {
 
   em {
     @extend %normal-font-style;
+
+    color: var(--relate-post-date);
   }
 
   .card {
@@ -197,10 +199,6 @@ nav[data-toggle=toc] {
       transform: translate3d(0, -3px, 0);
       box-shadow: 0 10px 15px -4px rgba(0, 0, 0, 0.15);
     }
-  }
-
-  .timeago {
-    color: var(--relate-post-date);
   }
 
   p {
